<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uk.co.darkerwaters.heartrateanalyser.MainActivity" >
	
	<item android:id="@+id/menu_refresh"
          android:title="@string/action_refresh"
          android:checkable="false"
          android:orderInCategory="10"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_scan"
          android:title="@string/action_scan"
          android:orderInCategory="11"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_stop"
          android:title="@string/action_stop"
          android:orderInCategory="12"
          android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_exit"/>

</menu>
